# rapina

.github/workflows/: scorecard.yml
docs/content/docs/cli/: commands.md
docs/content/docs/core-concepts/: authentication.md  openapi.md  state.md  testing.md
docs/content/docs/getting-started/: installation.md
docs/content/docs/guides/: _index.md  deployment.md
rapina/: Cargo.toml
rapina-cli/: Cargo.toml
rapina-cli/src/: main.rs
rapina-cli/src/commands/: add.rs  codegen.rs  import.rs  mod.rs  new.rs  seed.rs  test.rs
rapina-cli/src/commands/templates/: auth.rs  crud.rs  rest_api.rs
rapina-cli/src/common/: env.rs  mod.rs
rapina-macros/src/: lib.rs
rapina/examples/: auth.rs  hello.rs  json.rs  macros.rs  todo_api.rs  validation.rs
rapina/examples/url-shortener/url-shortner/src/: lib.rs
rapina/src/: app.rs  discovery.rs  handler.rs  lib.rs  server.rs
rapina/src/health/: config.rs  endpoint.rs  mod.rs
rapina/src/introspection/: endpoint.rs  route_info.rs
rapina/src/jobs/: mod.rs
rapina/src/openapi/: spec.rs
rapina/src/router/: mod.rs  trie.rs
rapina/src/testing/: client.rs  mod.rs  snapshot.rs
rapina/tests/: jobs.rs
